--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@
         <div class="login-box">
             <div id="step-login">
                 <div class="step-indicator">🔐 Paso 1 de 3</div>
-                <h2>Control Datos Boy</h2>
-                <p class="subtitle">Ingreso a Bodega Rentísticos</p>
+                <h2>Control Datos</h2>
+                <p class="subtitle">Ingreso a Control</p>
                 
                 <input type="text" id="usuario" placeholder="Usuario (EPMCYOPAL)" autocomplete="off" autofocus>
                 <input type="password" id="password" placeholder="Contraseña" style="display: none;">
@@ -308,7 +308,7 @@
         const USUARIO_PERMITIDO = "epmcyopal"; 
 
         // Nueva URL de destino
-        const APPSHEET_URL = "https://script.google.com/macros/s/AKfycbznRivJdwrklHEJ_fq_KRL8YENpDhUtmO27e2k26a0/dev";
+        const APPSHEET_URL = "https://script.google.com/macros/s/AKfycbzOc0w_aP2mYumsIyk8IPOTu5esxH28rQq3x3Mop_4pGXGqGNBZcKQHrJCTB78Vzkrr/exec";
         
         let codigoGenerado = "";
         let usuarioActual = "";
