--- a/index.html
+++ b/index.html
@@ -264,8 +264,9 @@
 
     <script>
         const TIEMPO_VISTA_CODIGO = 5;
-        const APPSHEET_URL = "https://script.google.com/macros/s/AKfycbw5MKNNHxNUtdd-VmGhR17QWr7F-flF7WJ5ZWmhQ2_3Ij4nYQXOG65t8NEb9K5XT--f/exec";
-        const REGISTRO_URL = "https://script.google.com/macros/s/AKfycbw5MKNNHxNUtdd-VmGhR17QWr7F-flF7WJ5ZWmhQ2_3Ij4nYQXOG65t8NEb9K5XT--f/exec"; 
+        const NUEVA_URL = "https://script.google.com/macros/s/AKfycbw5MKNNHxNUtdd-VmGhR17QWr7F-flF7WJ5ZWmhQ2_3Ij4nYQXOG65t8NEb9K5XT--f/exec";
+        const APPSHEET_URL = NUEVA_URL;
+        const REGISTRO_URL = NUEVA_URL; 
         
         const USUARIO_REGISTRO = "EPMSCYOPAL"; 
         
